fixed bug, font changed, toolbar changed

--- a/frontend/src/lib/feature/board/board.component.html
+++ b/frontend/src/lib/feature/board/board.component.html
@@ -4,7 +4,7 @@
             <div class="filter-button"
                  (click)="selectToday()">
 
-                <img src="/assets/today.png"/>
+                <img src="/assets/pics/today.png"/>
                 <div class="filter-text">Today</div>
 
                 <counter class="counter"
@@ -14,7 +14,7 @@
             <div class="filter-button"
                  (click)="selectFlagged()">
 
-                <img src="/assets/mark.png"/>
+                <img src="/assets/pics/mark.png"/>
                 <div class="filter-text">Flagged</div>
 
                 <counter class="counter"
