--- a/frontend/src/lib/feature/list-element/list-element.component.html
+++ b/frontend/src/lib/feature/list-element/list-element.component.html
@@ -11,7 +11,7 @@
 
         <button
                 (click)="editTitle($event)">
-            <img src="/assets/edit.png"/>
+            <img src="/assets/pics/edit.png"/>
         </button>
     </div>
 
@@ -21,6 +21,6 @@
 
     <button class="delete-button"
             (click)="triggerDelete()">
-        <img src="/assets/trash.png"/>
+        <img src="/assets/pics/trash.png"/>
     </button>
 </div>
