--- a/frontend/src/lib/feature/reminder/reminder.component.html
+++ b/frontend/src/lib/feature/reminder/reminder.component.html
@@ -16,11 +16,11 @@
     <button #flagbtn
             class="reminder-button flag false"
             (click)="toggleFlag()">
-            <img #flag src="/assets/markFalse.png"/>
+            <img #flag src="/assets/pics/markFalse.png"/>
     </button>
 
     <button class="reminder-button delete" (click)="triggerDelete()">
-        <img src="/assets/check.png"/>
+        <img src="/assets/pics/check.png"/>
     </button>
 
 </div>
