--- a/frontend/src/lib/ui/toolbar/toolbar.component.html
+++ b/frontend/src/lib/ui/toolbar/toolbar.component.html
@@ -1,9 +1,9 @@
 <div class="toolbar" role="banner">
     <div class="title">
         {{title}}
-    <img
-            alt="Toolbar Logo"
-            src="/assets/poro2.png"
-    />
+<!--    <img-->
+<!--            alt="Toolbar Logo"-->
+<!--            src="/assets/pics/poro2.png"-->
+<!--    />-->
 </div>
 </div>
