--- a/frontend/src/lib/ui/toolbar/toolbar.component.scss
+++ b/frontend/src/lib/ui/toolbar/toolbar.component.scss
@@ -19,9 +19,10 @@
 }
 
 .title {
-  font-family: Algerian;
+  font-family: Dubai;
   font-size: 40px;
   margin: auto;
   float: right;
+  border-bottom: double;
 }
 
