--- a/frontend/src/lib/ui/add-button/add-button.component.html
+++ b/frontend/src/lib/ui/add-button/add-button.component.html
@@ -1,1 +1,1 @@
-<div class="plus-btn" (click)="onClick($event)"><img src="/assets/plus.png"/></div>
+<div class="plus-btn" (click)="onClick($event)"><img src="/assets/pics/plus.png"/></div>
