--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -27,3 +27,15 @@ input {
 input:focus {
   outline:none!important;
 }
+
+@keyframes slide {
+  0% {
+    opacity: 0;
+    transform: translateY(-40px) scale(0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
