--- a/frontend/src/lib/ui/toolbar/toolbar.component.scss
+++ b/frontend/src/lib/ui/toolbar/toolbar.component.scss
@@ -19,8 +19,8 @@
 }
 
 .title {
-  font-family: Dubai;
-  font-size: 40px;
+  font-family: Dubiel;
+  font-size: 60px;
   margin: auto;
   float: right;
   border-bottom: double;
