--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -28,6 +28,14 @@ input:focus {
   outline:none!important;
 }
 
+@font-face {
+  font-family: Dubiel;
+  src: local("Dubiel"), url("./assets/fonts/Dubiel/DUBIEL.TTF") format("truetype");
+
+  font-family: DubielItaly;
+  src: local("Dubiel"), url("./assets/fonts/Dubiel/DubielItalic.ttf") format("truetype");
+}
+
 @keyframes slide {
   0% {
     opacity: 0;
