--- a/frontend/src/lib/ui/filter-button/filter-button.component.html
+++ b/frontend/src/lib/ui/filter-button/filter-button.component.html
@@ -1,4 +1,4 @@
-<div class="filter-button">
+<div class="filter-button fancy-hover">
     <img [src]="icon"/>
     <div class="filter-text">{{text}}</div>
 
