--- a/frontend/src/lib/feature/list-element/list-element.component.scss
+++ b/frontend/src/lib/feature/list-element/list-element.component.scss
@@ -23,7 +23,7 @@
 }
 
 .list-card:hover {
-  transform: translateY(-3px);
+  transform: translateY(-5px);
 }
 
 .list-card input {
@@ -81,4 +81,5 @@
 .delete-button:hover {
   transform: translateY(-4px);
   border: 3px solid red;
+  box-shadow: 0 12px 16px 0 rgba(255, 0, 0, 0.53);
 }
