--- a/frontend/src/lib/ui/filter-button/filter-button.component.scss
+++ b/frontend/src/lib/ui/filter-button/filter-button.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   background-color: transparent;
-  border: 1px black solid;
+  border: 1px solid white;
   border-radius: 10px;
   padding: 5px 10px 5px 10px;
   transition: 0.2s;
@@ -17,7 +17,8 @@
 }
 
 .filter-button:hover {
-  transform: translateY(-4px);
+  //transform: translateY(-4px);
+  box-shadow: 0 12px 16px 0 #00fcb582;
   cursor: default;
 }
 
@@ -33,4 +34,26 @@
   margin-left: 10px;
   width: max-content;
   height: max-content;
+}
+
+.fancy-hover {
+  position:relative;
+  overflow:hidden;
+}
+
+.fancy-hover:before {
+  content: "";
+  position: absolute;
+  height: 150px;
+  width: 50px;
+  background : #fff;
+  left: -55px;
+  top: -40px;
+  transform: rotate(37deg);
+  transition: all .3s;
+  opacity: 0.3;
+}
+
+.fancy-hover:hover:before {
+  left:95%;
 }
