implemented title glitch, change border color

--- a/frontend/src/lib/feature/board/board.component.scss
+++ b/frontend/src/lib/feature/board/board.component.scss
@@ -1,6 +1,6 @@
 #board {
   background: transparent;
-  color: #000000;
+  color: #ffffff;
   font-family: Arial;
   display: flex;
   flex-direction: row;
