--- a/frontend/src/lib/feature/list-element/list-element.component.scss
+++ b/frontend/src/lib/feature/list-element/list-element.component.scss
@@ -64,7 +64,7 @@
 
 .delete-button {
   background-color: transparent;
-  border: 1px solid black;
+  border: 1px solid #ffffff;
   border-radius: 5px;
   height: 36px;
   width: 36px;
