--- a/frontend/src/lib/feature/reminder/reminder.component.scss
+++ b/frontend/src/lib/feature/reminder/reminder.component.scss
@@ -29,7 +29,7 @@
 
 .reminder-button {
   background-color: transparent;
-  border: 1px solid black;
+  border: 1px solid #ffffff;
   border-radius: 5px;
   height: 40px;
   width: 40px;
@@ -54,7 +54,7 @@
 
 .date-card{
   background-color: transparent;
-  border: 1px solid black;
+  border: 1px solid #ffffff;
   border-radius: 5px;
   height: 36px;
   width: 180px;
@@ -89,7 +89,7 @@
 }
 
 .false {
-  border-color: black;
+  border-color: #ffffff;
 }
 
 .true {
@@ -98,7 +98,7 @@
 
 
 .delete {
-  color: black;
+  color: #ffffff;
   margin-left: 10px;
   margin-right: 10px;
   img{
