--- a/frontend/src/lib/ui/toolbar/toolbar.component.html
+++ b/frontend/src/lib/ui/toolbar/toolbar.component.html
@@ -1,9 +1,6 @@
 <div class="toolbar" role="banner">
-    <div class="title">
-        {{title}}
-<!--    <img-->
-<!--            alt="Toolbar Logo"-->
-<!--            src="/assets/pics/poro2.png"-->
-<!--    />-->
-</div>
+<!--    <div class="title">-->
+<!--        {{title}}-->
+<!--    </div>-->
+    <a href="#" class="glitch" data-glitch="My Board is the Lord">{{title}}</a>
 </div>
