--- a/frontend/src/lib/ui/filter-button/filter-button.component.scss
+++ b/frontend/src/lib/ui/filter-button/filter-button.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   background-color: transparent;
-  border: 1px solid white;
+  border: 1px solid #ffffff;
   border-radius: 10px;
   padding: 5px 10px 5px 10px;
   transition: 0.2s;
