better title glitch with border

--- a/frontend/src/lib/ui/toolbar/toolbar.component.html
+++ b/frontend/src/lib/ui/toolbar/toolbar.component.html
@@ -2,5 +2,5 @@
 <!--    <div class="title">-->
 <!--        {{title}}-->
 <!--    </div>-->
-    <a href="#" class="glitch" data-glitch="My Board is the Lord">{{title}}</a>
+    <a href="#" class="title" data-glitch="My Board is the Lord">{{title}}</a>
 </div>
