made some code beautification in frontend

--- a/frontend/src/lib/ui/add-button/add-button.component.html
+++ b/frontend/src/lib/ui/add-button/add-button.component.html
@@ -1,1 +1,3 @@
-<div class="plus-btn" (click)="onClick($event)"><img src="/assets/pics/plus.png"/></div>
+<div class="plus-btn" (click)="onClick($event)">
+    <img src="/assets/pics/plus.png"/>
+</div>
