--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<toolbar></toolbar>
+<toolbar [title]="'My Board is the Lord'"></toolbar>
 
 <div class= "content" role="main">
     <board></board>
