--- a/frontend/src/lib/ui/toolbar/toolbar.component.html
+++ b/frontend/src/lib/ui/toolbar/toolbar.component.html
@@ -1,3 +1,3 @@
 <div class="toolbar" role="banner">
-    <a href="#" class="title" data-glitch="My Board is the Lord">{{title}}</a>
+    <a #titleElement href="#" class="title">{{title}}</a>
 </div>
